// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node to react transformer replacement will prioritize a high priority replacer over a normal priority replacer 1`] = `
<span>
  Replacer X
</span>
`;

exports[`node to react transformer replacement will prioritize a normal priority replacer over a low priority replacer 1`] = `
<span>
  Replacer Y
</span>
`;
